--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "buffer": "^6.0.3",
     "concurrently": "^5.3.0",
     "config": "^3.3.3",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "ethers": "^6.16.0",
